--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@types/node": "^8.0.7",
-    "@types/react": "15.0.21",
-    "@types/react-dom": "0.14.23",
-    "gatsby": "^1.9.119",
-    "gatsby-link": "^1.6.28",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-typescript": "^1.4.10"
+    "@types/node": "^13.13.4",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "@types/react-helmet": "^5.0.15",
+    "gatsby": "^2.21.9",
+    "gatsby-link": "^2.4.0",
+    "gatsby-plugin-react-helmet": "^3.3.0",
+    "gatsby-plugin-typescript": "^2.4.0",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0"
   },
   "keywords": [
     "gatsby, typescript"
@@ -24,7 +27,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.8.2"
+    "prettier": "^2.0.5"
   },
   "contributors": [
     "fabien0102 <fabien0102@gmail.com>",
