--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "gatsby-starter-typescript",
-  "description": "Gatsby TypeScript starter",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "name": "site",
+  "description": "Kolton personal site",
+  "version": "0.1.0",
+  "author": "Kolton Gagnon",
+  "keywords": [
+    "gatsby, typescript"
+  ],
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop"
+  },
   "dependencies": {
     "@types/node": "^13.13.4",
     "@types/react": "^16.9.34",
@@ -10,27 +17,17 @@
     "@types/react-helmet": "^5.0.15",
     "gatsby": "^2.21.9",
     "gatsby-link": "^2.4.0",
+    "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-typescript": "^2.4.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0"
   },
-  "keywords": [
-    "gatsby, typescript"
-  ],
-  "license": "MIT",
-  "main": "n/a",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --parser typescript --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.ts*\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "devDependencies": {
-    "prettier": "^2.0.5"
-  },
-  "contributors": [
-    "fabien0102 <fabien0102@gmail.com>",
-    "Hays Clark <hays.clark@gmail.com>"
-  ]
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "eslint": "^6.8.0",
+    "prettier": "^2.0.5",
+    "typescript": "^3.8.3"
+  }
 }
